2005-06-04  Richard Sandiford  <rsandifo@nildram.co.uk>

	* MAINTAINERS: Update my email address.

2005-06-03  Joel Brobecker  <brobecker@adacore.com>

	* symmisc.c (dump_symtab_1): Renamed from dump_symtab.
	(dump_symtab): New function.

2005-04-02  Joel Brobecker  <brobecker@adacore.com>

	* exceptions.h: Include ui-out.h.
	(ui_out): Remove declaration.
	* Makefile.in (exceptions_h): Add dependency on ui-out.h.

2005-05-30  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS (Can Commit Without Approval): New section,
	previously burried under "Target Instruction Set Architectures".
	Note that cagney "can commit" changes to powerpc-linux.
	
	* MAINTAINERS: Drop architecture and target vectors.

2005-05-29  Eli Zaretskii  <eliz@gnu.org>

	* config/djgpp/fnchange.lst: Add mappings for linux-ppc-low.c and
	linux-ppc64-low.c.

2005-05-28  Bob Rossi  <bob@brasko.net>
	* Makefile.in (SUBDIR_MI_OBS, SUBDIR_MI_SRCS): Add mi-common.
	(gdb/mi/ headers): Add mi_common_h.
	(breakpoint.o, infrun.o): Add dependencies mi_common_h.
	* breakpoint.c (include): Add include 'mi/mi-common.h'.
	(print_it_typical): Use async_reason_lookup.
	(watchpoint_check): Ditto.
	* infrun.c (include): Add include 'mi/mi-common.h'.
	(print_stop_reason): Use async_reason_lookup.
	* mi/mi-common.h: New file.
	* mi/mi-common.c: Ditto.

2005-05-29  Joel Brobecker  <brobecker@adacore.com>

	* alpha-tdep.c (alpha_next_pc): Use correct register number
	for floating-point branch instructions.

2005-05-28  Daniel Jacobowitz  <dan@codesourcery.com>
	    Jonathan Larmour  <jifl@eCosCentric.com>

	PR backtrace/1760
	* frame.c (backtrace_limit): Change type to int.
	(get_prev_frame): Update backtrace limit support.
	(_initialize_frame): Use add_setshow_integer_cmd for backtrace_limit.

2005-05-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.tgt (powerpc64-*-linux*): Enable gdbserver.
	* regformats/reg-ppc64.dat: New file.

2005-05-28  Daniel Jacobowitz  <dan@codesourcery.com>
